# basic-mcp-server

./: .env  .env.example  .gitignore  AddNewlines.ps1  LICENSE  README.md  mcp_server.py  pyproject.toml  requirements.txt  run_analysis.py  run_tests.py  simple_test.py  test_analyzer.py  test_claude.py  test_defaults.py  test_ollama.py
analysis_output/: code_content.json  code_samples.json  environment.json  patterns.json
analysis_output/docs/: README.md
analysis_output/docs/architecture/: README.md
analysis_output/docs/dependencies/: README.md
analysis_output/docs/patterns/: README.md
analysis_output/docs/structure/: FxRateImporterTemp.md  FxRateImporterTemp_Db.md  README.md
examples/: example_client.py  websocket_client.html
mcp_server/: __init__.py
mcp_server/config/: __init__.py  settings.py
mcp_server/core/: __init__.py  server.py
mcp_server/handlers/: __init__.py  ai_development_handlers.py  base_handlers.py  enhanced_knowledge_handlers.py  knowledge_handlers.py  system_handlers.py
mcp_server/models/: __init__.py  json_rpc.py
mcp_server/services/: __init__.py  claude_service.py  embedding_service.py  mongodb_service.py  openai_service.py  secrets_manager.py
mcp_server/services/knowledge_extraction/: __init__.py  call_graph_analyzer.py  code_chunker.py  code_extractor.py  (+6 more)
mcp_server/transports/: __init__.py  base.py  websocket.py
tests/: conftest.py  test_ai_development_handlers.py  test_code_extractor.py  test_embedding_service.py  test_mongodb_service.py  test_ollama_embeddings.py  test_pattern_extractor.py  test_qdrant_service.py
(+5 files in other folders)
